# difftop-rs

./: AGENT.md  Cargo.toml  README.md
src/: agent_dynamics.rs  degree.rs  differential_form.rs  euler.rs  lib.rs  smooth_manifold.rs  stokes.rs  tangent.rs  transversality.rs  vector_field.rs
tests/: math_tests.rs
